# lolcat

./: Cargo.toml  LICENSE  README.md  snapcraft.yaml  wapm.toml
src/: cat.rs  main.rs
