[package]
name = "lolcat"
version = "1.4.1"
authors = ["Umang Raghuvanshi <u@umangis.me>", "Magnus Anderson <todamath@gmail.com>"]
description = "The good ol' lolcat, now with fearless concurrency."
license = "MIT"
repository = "https://github.com/ur0/lolcat"

[dependencies]
clap = "2.33.0"
rand = "0.7.3"
atty = "0.2"
utf8-chars = "1.0.2"
