[package]
name = "lolcat"
version = "1.5.0"
authors = ["Umang Raghuvanshi <u@umangis.me>"]
description = "The good ol' lolcat, now with fearless concurrency."
license = "MIT"
repository = "https://github.com/ur0/lolcat"

[dependencies]
clap = "2.33.0"
rand = "0.7.3"
utf8-chars = "1.0.2"
termsize = "0.1.6"

[profile.release]
debug = false
lto = true
panic = "abort"
strip = true
